<resources>
    <string name="app_name">Megnatis</string>
    <string name="welcome_to_maggnet">Welcome to Megnatis</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="language_preference">Your language preference can be changed at any time in Settings.</string>
    <string name="continue_txt">Continue</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="create_your_account">Create your Account</string>
    <string name="sent_code">We sent the code to your mobile number</string>
    <string name="not_your_number">Not your mobile number?</string>
    <string name="click_here">Click Here</string>
    <string name="verify">Verify</string>
    <string name="send_again">Send Again</string>
    <string name="report_issue">Report Issue</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="contact_number">Enter your Number</string>
    <string name="email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_address">Email Address</string>
    <string name="email_password">Email Address</string>
    <string name="login">Login</string>
    <string name="login_via_email">Login via email</string>
    <string name="signup">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="login_your_account">Login to your Account</string>
    <string name="send">Send</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="referral_code">Referral Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="recent">Recent</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="settings">Settings</string>
    <string name="location">West Stockton</string>
    <string name="location_number">CA 97976</string>
    <string name="invite_friends">Invite your friends &amp; get various discount coupons</string>
    <string name="reset_password">Please enter your registered email address, you will receive a link to reset the password</string>
    <string name="terms_and_conditions_and_privacy_policy">I agree to <a href="https://masterpanel.maggnet.io/terms-and-conditions"><font color="#0073FF">Terms &amp; Conditions</font></a> and <a href="https://masterpanel.maggnet.io/privacy-policy"><font color="#0073FF">Privacy Policy.</font></a></string>
    <string name="google_maps_key">AIzaSyAE7lkpYe6jv85PXtzVePpVDMcdl4UoLHo</string>
    <string name="restaurant">Restaurant, Beauty shop...</string>
    <string name="confirm_number_dialog"><![CDATA[ We will be verifying the phone number: <br><br><b>%s</b> <br><br>Is this OK , or would you like to edit the number?]]></string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="special_char_not_allowed">Special characters are not allowed in phone number</string>
    <string name="failure">Failure</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="error_cant_reach_server">Can\'t reach server at the moment</string>
    <string name="error_internet_not_available">Internet connection not available</string>
    <string name="error_cannot_reach_server">Can\'t reach server at the moment</string>
    <string name="error_something_went_wrong">Something went wrong , please try again later</string>
    <string name="app_error">Error</string>
    <string name="otp_sent_successfully">Otp sent successfully</string>
    <string name="enter_your_number">Please enter your number</string>
    <string name="invalid_otp">Invalid otp</string>
    <string name="empty_otp">please enter the otp.</string>
    <string name="email_required_error">Please enter the Email</string>
    <string name="password_required_error">Password cannot be empty</string>
    <string name="confirm_password_required_error">Confirm Password cannot be empty</string>
    <string name="password_confirm_password_not_match">Password doesn\'t match</string>
    <string name="skip">Skip</string>
    <string name="referral_code_required_error">Referral Code cannot be empty</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="reset_link">Reset Password link has been sent successfully. Please click on the link to reset your password.</string>
    <string name="use_8_20_characters_from_password">Your password length must be between 5-12 character</string>
    <string name="newest_offerings">newest offerings</string>
    <string name="mc_donalds">Mc Donalds</string>
    <string name="coupon_discount">20% off on orders above 250</string>
    <string name="restaurants">Restaurants</string>
    <string name="view_all">View All</string>
    <string name="filter">Filter</string>
    <string name="settings_change_language">Change Language</string>
    <string name="settings_notification">Notifications</string>
    <string name="settings_my_wishlist">My Wishlist</string>
    <string name="settings_reward_history">History</string>
    <string name="settings_legals">Legals</string>
    <string name="settings_account">Account</string>
    <string name="settings_help_center">Help Center</string>
    <string name="settings_invite_earn">Invite &amp; Earn</string>
    <string name="settings_logout">Log out</string>
    <string name="username">Username</string>
    <string name="phone_number_user">+91 9988456756</string>
    <string name="settings_help">Help</string>
    <string name="select_issue">Select Issue/Problem</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="settings_about_us">About Us</string>
    <string name="settings_disclaimer">Disclaimer</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_terms_conditions">Terms &amp; Conditions</string>
    <string name="about_url">https://masterpanel.maggnet.io/about-us</string>
    <string name="privacy_url">https://masterpanel.maggnet.io/privacy-policy</string>
    <string name="disclaimer_url">https://masterpanel.maggnet.io/disclaimer</string>
    <string name="terms_conditions_url">https://masterpanel.maggnet.io/terms-and-conditions</string>
    <string name="subject">Subject</string>
    <string name="select">Select</string>
    <string name="qr_code_text">Your QR code is private, If your share it with someone, they can scan it with their Megnatis camera.</string>
    <string name="maggnet_account">Megnatis account</string>
    <string name="qr_code_btn_text">Scan</string>
    <string name="reset_qr_code">Reset QR Code</string>
    <string name="qr_code">QR Code</string>
    <string name="error_subject">Please enter Subject</string>
    <string name="error_description">Please enter Description</string>
    <string name="error_issue">Please select issue</string>
    <string name="invite_earn">Invite &amp; Earn</string>
    <string name="invite_your_friends">Invite your friends &amp; get amazing reward points</string>
    <string name="share_the_code">Share the code below or ask your friends to enter it during sign up to get reward bonus</string>
    <string name="copy_code">Copy Code</string>
    <string name="invite_earn_friends">Invite Friends</string>
    <string name="terms_conditions"><a href=""><font color="#0073FF">Terms &amp; Conditions</font></a></string>
    <string name="share_code">YAGOS01</string>
    <string name="distance_time">21 mins</string>
    <string name="my_points">My Points</string>
    <string name="total_points">Total Points</string>
    <string name="banner_experience">What experience would you like to have today?</string>
    <string name="history">History</string>
    <string name="visit_places">14 visits 14 places</string>
    <string name="please_wait">Please wait…</string>
    <string name="code_copy_in_clipboard">Code copied in clipboard</string>
    <string name="activity_not_found_exception">No app found to perform this action. </string>
    <string name="maggnet_app_invite">Sign Up With Megnatis and get discount on your first order by using my invite code  </string>
    <string name="maggnet_app_link">https://play.google.com/store/apps/details?id=com.maggnet</string>
    <string name="qr_code_title">QR Code</string>
    <string name="qr_code_scanner_text">Scan a QR Code</string>
    <string name="permission">Permission</string>
    <string name="grant_permission_from_settings">You will be redirected to settings to grant permission</string>
    <string name="open_settings">Open Settings</string>
    <string name="qr_code_gallery_image_pick_error">You haven\'t picked Image</string>
    <string name="share_with">Share with…</string>
    <string name="wishlist">WishList</string>
    <string name="coupon">Coupon</string>
    <string name="shop">Shop</string>
    <string name="no_data_found">No Data Found</string>
    <string name="add_to_wishlist">+ Wishlist</string>
    <string name="close">Close</string>
    <string name="shop_details">Shop Details</string>
    <string name="restaurant_miles">Restaurant | 345 miles</string>
    <string name="member"><a href=""><font color="#0073FF">Member</font></a> </string>
    <string name="promotions">Promotions</string>
    <string name="add_to_wishlisted">Add to WishList</string>
    <string name="about_shop">About the shop</string>
    <string name="phone_number">Phone Number</string>
    <string name="call"><a href=""><font color="#0073FF">Call</font></a> </string>
    <string name="address">Address</string>
    <string name="show_more_address"><a href=""><font color="#0073FF">Show more address</font></a></string>
    <string name="shop_photos">Shop photos</string>
    <string name="loyality_rewards">Loyality Rewards</string>
    <string name="my_reward_points">My Reward Points</string>
    <string name="redeem">Redeem</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_register_email">Register Email</string>
    <string name="new_password_required_error">New Password cannot be empty</string>
    <string name="qr_code_reset_dialog_text">Your existing QR code will no longer work.</string>
    <string name="qr_code_button_text_keep">Keep</string>
    <string name="qr_code_button_text_reset">Reset</string>
    <string name="qr_code_successful_reset_dialog_text">The previous QR code has been reset and\na new QR code has been created.</string>
    <string name="referral_code_text">You have successfully sign up through your friend\'s referral code, you will get </string>
    <string name="earn">Earn 1 pts for every $1 spent</string>
    <string name="discount">$5 off</string>
    <string name="coupon_expire"><a href=""><font color="#0073FF">Expires in 7 days</font></a></string>
    <string name="discount_points">50 pts</string>
    <string name="rewards_total_points"><a href=""><font color="#0073FF">200 points</font></a></string>
    <string name="rewards_history">History</string>
    <string name="shop_order">for first purchase from shop order : #21932</string>
    <string name="rewards_points">140 pts I 2nd Jan</string>
    <string name="total_rewards">Total Rewards</string>
    <string name="available">Available</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_rewards_points">Transfer reward points</string>
    <string name="reward_points">Reward Points</string>
    <string name="enter_points_to_transfer">Enter reward points to transfer</string>
    <string name="available_points">Available Points 200</string>
</resources>