<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_maggnet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/text_size_large_xx1"
        android:layout_marginTop="@dimen/_50sdp"
        app:fontFamily="@font/avenir_lt_std_55_roman"
        android:textColor="@color/dark_grey"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/text_size_large_x1"
        android:layout_marginTop="@dimen/_10sdp"
        app:fontFamily="@font/avenir_lt_std_55_roman"
        android:textColor="@color/text_light_grey"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selectEnglish"
        android:layout_width="match_parent"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/txtLanguage"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_55sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_lt_std_55_roman"
            android:text="@string/english"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/_20sdp"
            android:button="@drawable/checkbox"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selectArabic"
        android:layout_width="match_parent"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/bg_light_grey"
        app:layout_constraintTop_toBottomOf="@+id/selectEnglish"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_15sdp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtArabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_lt_std_55_roman"
            android:text="@string/arabic"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_medium" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/_20sdp"
            android:button="@drawable/checkbox"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtLanguagePreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_preference"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:textSize="@dimen/text_size_large"
        android:layout_marginBottom="@dimen/_40sdp"
        android:lineSpacingExtra="@dimen/_4sdp"
        android:gravity="center"
        app:fontFamily="@font/avenir_lt_std_45_book"
        android:textColor="@color/text_light_grey"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/background_button"
        android:fontFamily="@font/avenir_lt_std_95_black"
        android:paddingTop="@dimen/_14sdp"
        android:paddingBottom="@dimen/_14sdp"
        android:text="@string/continue_txt"
        android:textAllCaps="true"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_35sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15sp" />





</androidx.constraintlayout.widget.ConstraintLayout>