<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_80sdp"
            android:text="@string/welcome_to_maggnet"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/text_size_large_xx1"
            app:fontFamily="@font/avenir_lt_std_55_roman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/choose_your_language"
            android:textColor="@color/text_light_grey"
            android:textSize="@dimen/text_size_large_x1"
            app:fontFamily="@font/avenir_lt_std_55_roman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/englishLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_55sdp"
            android:layout_marginEnd="@dimen/_45sdp"
            android:background="@drawable/background_button"
            android:backgroundTint="@color/blue"
            app:layout_constraintTop_toBottomOf="@+id/txtLanguage">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:fontFamily="@font/avenir_lt_std_55_roman"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkboxEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:button="@drawable/checkbox"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/arabicLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_45sdp"
            android:background="@drawable/background_button"
            android:backgroundTint="@color/bg_light_grey"
            app:layout_constraintTop_toBottomOf="@+id/englishLayout">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtArabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:fontFamily="@font/avenir_lt_std_55_roman"
                android:text="@string/arabic"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkboxArabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:button="@drawable/checkbox"
                android:checked="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtLanguagePreference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:text="@string/language_preference"
            android:textColor="@color/text_light_grey"
            android:textSize="@dimen/text_size_large"
            app:fontFamily="@font/avenir_lt_std_45_book"
            app:layout_constraintBottom_toTopOf="@+id/btnContinue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_35sdp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/avenir_lt_std_95_black"
            android:paddingTop="@dimen/_14sdp"
            android:paddingBottom="@dimen/_14sdp"
            android:text="@string/continue_txt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_15sp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
